@@ -62,6 +62,8 @@
 #define MP_CMD_SPEED_MULT 58
 #define MP_CMD_SPEED_SET 59
 #define MP_CMD_RUN 60
+#define MP_CMD_SUB_LOAD 64
+#define MP_CMD_SUB_REMOVE 65
 
 #define MP_CMD_GUI_EVENTS       5000
 #define MP_CMD_GUI_LOADFILE     5001
